Second commit - Added song

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <audio id="backgroundMusic" loop>
-        <source src="birthday_song.mp3" type="audio/mpeg">
+        <source src="birthday_song.wav" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
@@ -37,8 +37,8 @@
     <div class="step" id="step3">
         <div class="letter-container" id="letterContainer">
             <div class="letter">
-                <p>To the <b>अबला आशा </b>, To the topper of Regent and Bishop Cotton School , To the <b>OG पारंपरिक विदर्भी मुलगी</b>, To the traveller , To the Dance Lover ,To the upcoming <b>सुगरण</b> ,
-                    To that girl who is kind nn Beautiful inside and out , To the independant woman</p>
+                <p>To the <b>अबला आशा </b>, To the topper of Regent and Bishop Cotton School , To the <b>OG पारंपरिक विदर्भी मुलगी</b>, To the travel enthusiast , To the Dance Lover who thinks she can't dance ,To the upcoming <b>सुगरण</b> ,
+                    To the girl who is kind nn Beautiful inside and out , To the independant woman</p>
                 <p><b>To Sanikaa Deshmukh</p>
                 <button id="unfoldButton" class="action-button">I request to click on this button!</button>
             </div>
